--- a/.github/workflows/publishWebAppAcr.yml
+++ b/.github/workflows/publishWebAppAcr.yml
@@ -1,65 +1,65 @@
-name: Publish Web App Bicep To ACR Workflow 
+#name: Publish Web App Bicep To ACR Workflow 
 
-on: [push]
-permissions:
-  id-token: write
-  contents: read
+#on: [push]
+#permissions:
+#  id-token: write
+#  contents: read
   
-env:
-  MODULE_NAME: webapp
-  MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
-  MODULE_FILE_PATH: ./modules/webApp.bicep 
-  MODULE_METADATA_FILE_PATH: metadata.json
+#env:
+#  MODULE_NAME: webapp
+#  MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
+#  MODULE_FILE_PATH: ./modules/webApp.bicep 
+#  MODULE_METADATA_FILE_PATH: metadata.json
 
 
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
+#jobs:
+#  lint:
+#    runs-on: ubuntu-latest
+#    steps:
     
-    - uses: actions/checkout@v2
-    - uses: azure/login@v1
-      name: Sign in to Azure
-      with:
-       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
-    - name: Run Bicep linter
-      run: |
-          az bicep version
-          az bicep build --file ${{ env.MODULE_FILE_PATH }}
+#    - uses: actions/checkout@v2
+#    - uses: azure/login@v1
+#      name: Sign in to Azure
+#      with:
+#       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
+#    - name: Run Bicep linter
+#      run: |
+#          az bicep version
+#          az bicep build --file ${{ env.MODULE_FILE_PATH }}
   
-  publish:
-    runs-on: ubuntu-latest
-    needs: [ lint ]
-    steps:
+#  publish:
+#    runs-on: ubuntu-latest
+#    needs: [ lint ]
+#    steps:
  
-    - uses: actions/checkout@v2
-    - uses: azure/login@v1
-      name: Sign in to Azure
-      with:
-       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
-    - name: Get module version number
-      run: |
-        majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
-        versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
-    - uses: azure/cli@v1
-      name: Publish web app module with version tag
-      with:
-        inlineScript: |
-          az config set bicep.use_binary_from_path=False.
-          az bicep install 
-          az bicep publish \
-            --file ${{ env.MODULE_FILE_PATH }} \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
-    - uses: azure/cli@v1
-      name: Publish web app module with latest tag 
-      with:
-        inlineScript: |      
-          az config set bicep.use_binary_from_path=False.
-          az bicep install 
-          az bicep publish \
-            --file ${{ env.MODULE_FILE_PATH }} \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' 
+#    - uses: actions/checkout@v2
+#    - uses: azure/login@v1
+#      name: Sign in to Azure
+#      with:
+#       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
+#    - name: Get module version number
+#      run: |
+#        majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
+#        versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
+#        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
+#    - uses: azure/cli@v1
+#      name: Publish web app module with version tag
+#      with:
+#        inlineScript: |
+#          az config set bicep.use_binary_from_path=False.
+#          az bicep install 
+#          az bicep publish \
+#            --file ${{ env.MODULE_FILE_PATH }} \
+#            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
+#    - uses: azure/cli@v1
+#      name: Publish web app module with latest tag 
+#      with:
+#        inlineScript: |      
+#          az config set bicep.use_binary_from_path=False.
+#          az bicep install 
+#          az bicep publish \
+#            --file ${{ env.MODULE_FILE_PATH }} \
+#            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' 
             
 
         
