--- a/.github/workflows/workflowAcaller.yml
+++ b/.github/workflows/workflowAcaller.yml
@@ -1,25 +1,16 @@
 name: Sample workflow publiish sqldb
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    workflow_dispatch:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
   publish:
-    needs: lint
     uses: ./.github/workflows/workflowBreusable.yml
     with:
       MODULE_NAME: sqldatabase
       MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
       MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
       MODULE_METADATA_FILE_PATH: metadata.json
-    secrets: inherit
+
+   
 
