--- a/.github/workflows/workflowBreusable.yml
+++ b/.github/workflows/workflowBreusable.yml
@@ -27,7 +27,7 @@ jobs:
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
     - name: Run Bicep linter
-      run: az bicep build --file ${{ env.MODULE_FILE_PATH }}
+      run: az bicep build --file ${{ inputs.MODULE_FILE_PATH }}
   
   publish:
     runs-on: ubuntu-latest
@@ -51,8 +51,8 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --file ${{ env.MODULE_FILE_PATH }} \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
+            --file ${{ inputs.MODULE_FILE_PATH }} \
+            --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:${{ inputs.MODULE_VERSION }}' 
     - uses: azure/cli@v1
       name: Publish web app module with latest tag 
       with:
@@ -60,6 +60,6 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --file ${{ env.MODULE_FILE_PATH }} \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' 
+            --file ${{ inputs.MODULE_FILE_PATH }} \
+            --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' 
             
