--- a/.github/workflows/workflowAcaller.yml
+++ b/.github/workflows/workflowAcaller.yml
@@ -10,6 +10,7 @@ jobs:
       MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
       MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
       MODULE_METADATA_FILE_PATH: metadata.json
+    secrets: inherit
 
    
 
