--- a/.github/workflows/publishSqlDBServerAcr.yml
+++ b/.github/workflows/publishSqlDBServerAcr.yml
@@ -1,69 +1,16 @@
-#name: Publish SQL Database and Server Bicep To ACR Workflow
+name: Caller workflow publish SQL DB 
 
-#on: [push]
-#permissions:
-#  id-token: write
-#  contents: read
+on: [push]
 
-#env:
-#  MODULE_NAME: sqldatabase
-#  MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
-#  MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
-#  MODULE_METADATA_FILE_PATH: metadata.json
+jobs:
+  publish:
+    uses: ./.github/workflows/reusableWorkflow.yml
+    with:
+      MODULE_NAME: sqldatabase
+      MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
+      MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
+      MODULE_METADATA_FILE_PATH: metadata.json
+    secrets: inherit
 
+   
 
-#jobs:
-#  lint:
-#    runs-on: ubuntu-latest
-#    steps:
-    
-#    - uses: actions/checkout@v2
-#    - uses: azure/login@v1
-#      name: Sign in to Azure
-#      with:
-#       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
-#    - name: Run Bicep linter
-#      run: |
-#          az bicep version
-#          az bicep build --file ${{ env.MODULE_FILE_PATH }}
-  
-#  publish:
-#    runs-on: ubuntu-latest
-#    needs: [ lint ]
-#    steps:
- 
-#    - uses: actions/checkout@v2
-#    - uses: azure/login@v1
-#      name: Sign in to Azure
-#      with:
-#       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
-#    - name: Get module version number
-#      run: |
-#        majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
-#        versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-#        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
-#    - uses: azure/cli@v1
-#      name: Publish SQL database and server module with version tag
-#      with:
-#        inlineScript: |
-#          az config set bicep.use_binary_from_path=False.
-#          az bicep install 
-#          az bicep publish \
-#            --file ${{ env.MODULE_FILE_PATH }} \
-#            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
-#    - uses: azure/cli@v1
-#      name: Publish SQL database and server module with latest tag 
-#      with:
-#        inlineScript: |      
-#          az config set bicep.use_binary_from_path=False.
-#          az bicep install 
-#          az bicep publish \
-#            --file ${{ env.MODULE_FILE_PATH }} \
-#            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' 
-            
-
-        
-
-
-            
-           
